[tool.poetry]
name = "silverrail"
version = "0.1.0"
description = ""
authors = ["Ash Omaraie <49348213+aomarai@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
argon2-cffi = "^23.1.0"
bcrypt = "^4.2.1"
django-cors-headers = "^4.7.0"
django-storages = "^1.14.4"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
boto3 = "^1.36.21"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
